<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_menu_save"
        android:orderInCategory="102"
        android:title="@string/saveExp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/archieve"
        android:icon="@drawable/ic_menu_archive"
        android:orderInCategory="103"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/about" />

    <item
        android:id="@+id/action_view_database"
        android:title="@string/view_database" />

</menu>
