<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7" />

    <TextView
        android:gravity="center"
        android:layout_margin="2dp"
        android:text="@string/bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:gravity="center"
        android:text="@string/tip"
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />

    <TextView
        android:gravity="center"
        android:text="@string/split"
        android:layout_width="0dp"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    <TextView
        android:gravity="center"
        android:text="@string/tipAmt"
        android:layout_width="0dp"
        android:layout_margin="2dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.1" />

    <TextView
        android:gravity="center"
        android:text="@string/total_bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1" />

    <TextView
        android:layout_margin="2dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="@string/perperson"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
</LinearLayout>