<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="12dp"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/SeaGreen" />

        <EditText
            android:id="@+id/etBill"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvAmount"
            android:layout_below="@+id/tvAmount"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/dollar"
            android:inputType="number"
            android:paddingLeft="30dp"
            android:textColor="@color/SeaGreen" />

        <TextView
            android:id="@+id/tvTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvAmount"
            android:layout_below="@+id/etBill"
            android:layout_marginBottom="16dp"
            android:text="@string/tip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/SeaGreen" />

        <SeekBar
            android:id="@+id/sbtip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvPpl"
            android:layout_alignLeft="@+id/tvTip"
            android:layout_marginBottom="15dp"
            android:max="20"
            android:progressDrawable="@drawable/progressbar"
            android:secondaryProgress="0" />

        <TextView
            android:id="@+id/tvPpl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/sbPeople"
            android:layout_alignLeft="@+id/sbPeople"
            android:layout_marginBottom="16dp"
            android:text="@string/split"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/SeaGreen" />

        <SeekBar
            android:id="@+id/sbPeople"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/spRound"
            android:layout_centerVertical="true"
            android:layout_marginBottom="22dp"
            android:max="10"
            android:paddingLeft="20dp"
            android:progressDrawable="@drawable/progressbar"
            android:secondaryProgress="0" />

    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Calculate"
        android:textColor="@color/SeaGreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:visibility="gone"
                android:id="@+id/tvTipAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submitButton"
                android:layout_weight="1"
                android:text="@string/tipAmt"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/SeaGreen" />

            <TextView
                android:id="@+id/tvFinalTip"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvFinalPP"
                android:layout_alignLeft="@+id/tvFinalPP"
                android:layout_alignStart="@+id/tvFinalPP"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Tip Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/SeaGreen" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBill"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTipAmt"
                android:text="@string/bill"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/SeaGreen" />

            <TextView
                android:id="@+id/tvFinalBill"
                android:layout_width="0dp"
                android:gravity="end"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvBill"
                android:visibility="gone"
                android:layout_alignRight="@+id/tvBill"
                android:layout_below="@+id/tvFinalPP"
                android:text="Final Bill Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/SeaGreen" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPerPerson"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvBill"
                android:text="@string/perperson"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/SeaGreen" />

            <TextView
                android:id="@+id/tvFinalPP"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:text="PerPerson Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone"
                android:textColor="@color/SeaGreen" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>